--- a/Constancias/SolicitarConstancia.xaml
+++ b/Constancias/SolicitarConstancia.xaml
@@ -6,12 +6,13 @@
         xmlns:local="clr-namespace:Constancias"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
+        Background="#555859"
         Title="SolicitarConstancia" Height="1080" Width="1920" WindowStartupLocation="CenterScreen" WindowState="Maximized">
     <Viewbox>
-        <Grid Margin="150 250" Background="{DynamicResource MaterialDesign.Brush.Primary.Dark}">
+        <Grid Margin="150 250" Background="#2a2e2f">
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="50">
                 <WrapPanel>
-                    <materialDesign:PackIcon Kind="AccountCircleOutline" Height="100" Width="100" VerticalAlignment="Center"/>
+                    <materialDesign:PackIcon Kind="AccountCircleOutline" Height="100" Width="100" VerticalAlignment="Center" Foreground="White" Margin="0 0 20 0"/>
                     <TextBlock Text="Nombre de solicitante" FontSize="80" FontWeight="DemiBold" Margin="0 50" Foreground="{DynamicResource MaterialDesign.Brush.Primary.Dark.Foreground}"/>
                 </WrapPanel>
 
