--- a/Constancias/MainWindow.xaml
+++ b/Constancias/MainWindow.xaml
@@ -25,82 +25,40 @@
             Grid.Column="1"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch">
-            <materialDesign:Flipper 
+            <materialDesign:Card 
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center"
-                Background="#2a2e2f">
-                <materialDesign:Flipper.FrontContent>
-                    <Viewbox>
-                        <StackPanel>
-                            <TextBlock Margin="20 10" HorizontalAlignment="Stretch" TextAlignment="Center" 
-                                       TextWrapping="Wrap" FontSize="35" FontWeight="Bold" Text="Iniciar Sesion" 
-                                       Foreground="White" VerticalAlignment="Top" Height="60" Width="350"/>
+                Background="#2a2e2f"
+                UniformCornerRadius="20">
+                <Viewbox>
+                    <StackPanel>
+                        <TextBlock Margin="20 10" HorizontalAlignment="Stretch" TextAlignment="Center" 
+                                    TextWrapping="Wrap" FontSize="35" FontWeight="Bold" Text="Sistema gestión constancias" 
+                                    Foreground="White" VerticalAlignment="Top" Height="90" Width="350"/>
 
-                            <Viewbox
-                                Width="100"
-                                Height="100">
-                                <Image Source="Recursos/logoUV.png" />
-                            </Viewbox>
-
-
-                            <TextBox Margin="20 10" HorizontalAlignment="Center" x:Name="textBoxUsernameLogIn" Width="250" Foreground="White"
-                                     FontSize="15" materialDesign:HintAssist.Hint="Nombre de usuario"
-                                     BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                        
-                            <PasswordBox Margin="20 10" HorizontalAlignment="Center" x:Name="passwordBoxPasswordLogIn" Width="250" Foreground="White"
-                                FontSize="15" materialDesign:HintAssist.Hint="Contraseña"
-                                BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"/>
-                        
-                            <Button Margin="20 10" x:Name="btnLogin" Content="Iniciar sesión" Foreground="White"                     
-                                    FontSize="15" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.Darken="True"                    
-                                    Height="50" Width="250" materialDesign:ButtonAssist.CornerRadius="10" Click="BtnClickLogIn"/>
-
-                            <Button Margin="20 10 20 30" x:Name="btnSignIn" Content="Cambiar a registro de cuenta" Foreground="White"                             
-                                    FontSize="15" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.Darken="True"           
-                                    Height="50" Width="250" materialDesign:ButtonAssist.CornerRadius="10" Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-
-                        </StackPanel>
-                    </Viewbox>
-                </materialDesign:Flipper.FrontContent>
-
-                <materialDesign:Flipper.BackContent>
-                    <Viewbox>
-                        <StackPanel>
-                            <TextBlock Margin="20 10" HorizontalAlignment="Stretch" TextAlignment="Center" 
-                                TextWrapping="Wrap" FontSize="35" FontWeight="Bold" Text="Crear cuenta" 
-                                Foreground="White" VerticalAlignment="Top" Height="60" Width="350"/> 
-
-                            <Viewbox
-                                Width="100"
-                                Height="100">
-                                <Image Source="Recursos/logoUV.png" />
-                            </Viewbox>
+                        <Viewbox
+                            Width="100"
+                            Height="100"
+                            Margin="20">
+                            <Image Source="Recursos/logoUV.png" />
+                        </Viewbox>
 
 
-                            <TextBox Margin="20 10" HorizontalAlignment="Center" x:Name="textBoxUsernameSignIn" Width="250" Foreground="White"
-                                 FontSize="15" materialDesign:HintAssist.Hint="Nombre de usuario"
-                                 BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
+                        <TextBox Margin="20 10" HorizontalAlignment="Center" x:Name="textBoxNumeroPersonal" Width="250" Foreground="White"
+                                    FontSize="15" materialDesign:HintAssist.Hint="Numero de personal"
+                                    BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
 
-                            <TextBox Margin="20 10" HorizontalAlignment="Center" x:Name="textBoxUsernameEmail" Width="250" Foreground="White"
-                                FontSize="15" materialDesign:HintAssist.Hint="Correo"
-                                BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedTextBox}"/>
-                            
-                            <PasswordBox Margin="20 10" HorizontalAlignment="Center" x:Name="passwordBoxPasswordSignIn" Width="250" Foreground="White"
-                                FontSize="15" materialDesign:HintAssist.Hint="Contraseña"
-                                BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"/>
+                        <PasswordBox Margin="20 10" HorizontalAlignment="Center" x:Name="passwordBoxContrasenia" Width="250" Foreground="White"
+                            FontSize="15" materialDesign:HintAssist.Hint="Contraseña"
+                            BorderThickness="2" BorderBrush="{DynamicResource MaterialDesignDivider}" Style="{StaticResource MaterialDesignOutlinedPasswordBox}"/>
 
-                            <Button Margin="20 10" x:Name="btnSignin" Content="Crear cuenta" Foreground="White"                     
+                        <Button Margin="20 40" x:Name="btnLogin" Content="Iniciar sesión" Foreground="White"                     
                                 FontSize="15" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.Darken="True"                    
-                                Height="50" Width="250" materialDesign:ButtonAssist.CornerRadius="10" Click="BtnClickLogIn"/>
+                                Height="50" Width="250" materialDesign:ButtonAssist.CornerRadius="10" Click="ClickIniciarSesion"/>
 
-                            <Button Margin="20 10 20 30" x:Name="btnLogIn" Content="Cambiar a inicio de sesion" Foreground="White"                             
-                                FontSize="15" Style="{StaticResource MaterialDesignFlatMidBgButton}" materialDesign:ShadowAssist.Darken="True"           
-                                Height="50" Width="250" materialDesign:ButtonAssist.CornerRadius="10" Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-
-                        </StackPanel>
-                    </Viewbox>
-                </materialDesign:Flipper.BackContent>
-            </materialDesign:Flipper>
+                    </StackPanel>
+                </Viewbox>
+            </materialDesign:Card>
         </Viewbox>
     </Grid>
 </Window>
