--- a/Constancias/RegistrarProfesor.xaml
+++ b/Constancias/RegistrarProfesor.xaml
@@ -62,7 +62,7 @@
 
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="Asignaturas impartidas:" Margin="0,10,0,0"/>
-                    <Button x:Name="buttonAgregarExperiencia" Content="+"/>
+                    <Button x:Name="buttonAgregarExperiencia" Content="+" Click="AgregarAsignatura"/>
                 </StackPanel>
                     
                 <ListBox x:Name="listBoxAsignaturas"/>
@@ -96,18 +96,34 @@
 
                 <Button Content="Registrar" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,20,0,0" Click="RegistrarAcademico"/>
                 </StackPanel>
-
+            
+            
+            
+            <!--Programas educativos actualizados-->
             <StackPanel x:Name="stackPannelProgramasEducativosActualizados" Margin="10" Grid.Row="0" Grid.Column="1"  Visibility="Hidden">
                 <Label Content="Programas educativos actualizados" FontWeight="Bold" FontSize="30"/>
                 <!-- Nombre del programa -->
                 <StackPanel Margin="5">
                     <TextBlock Text="Nombre del programa:"/>
-                    <TextBox Text="Ingeniería de Software"/>
+                    <ComboBox x:Name="comboBoxProgramaEducativoActualizado" SelectedIndex="0">
+                        <ComboBoxItem Content="Ingenería de Software"/>
+                        <ComboBoxItem Content="Estadística"/>
+                        <ComboBoxItem Content="Redes y servicios de computo"/>
+                        <ComboBoxItem Content="Tecnologías computacionales"/>
+                        <ComboBoxItem Content="Ingeniería de Ciberseguridad e Infraestructura de Cómputo"/>
+                        <ComboBoxItem Content="Ingeniería en Ciencia de Datos"/>
+                        <ComboBoxItem Content="Ingeniería en Sistemas y Tecnologías de la Información"/>
+                    </ComboBox>
                 </StackPanel>
 
                 <!-- Rol del académico -->
                 <StackPanel Margin="5">
                     <TextBlock Text="Rol del académico:"/>
+                    <ComboBox>
+                        <ComboBoxItem Content="Asesor"/>
+                        <ComboBoxItem Content="Director"/>
+                        <ComboBoxItem Content="CoDirector"/>
+                    </ComboBox>
                     <TextBox Text="Participante"/>
                 </StackPanel>
 
@@ -123,7 +139,9 @@
                 <!-- Botón Aceptar -->
                 <Button Content="Aceptar" HorizontalAlignment="Right" Margin="5"/>
             </StackPanel>
-
+            
+            
+            <!--Certificación de programas educativos-->
             <StackPanel x:Name="stackPanelCertificacion" Margin="20" Grid.Column="1" Grid.Row="0" Visibility="Hidden">
                 <Label Content="Certificación de programas de estudios" FontWeight="Bold" FontSize="30"/>
                 <!-- Nombre del programa -->
@@ -151,6 +169,7 @@
                 <Button Content="Aceptar" HorizontalAlignment="Right" Margin="5"/>
             </StackPanel>
 
+            <!--Generación de productos académicos-->
             <StackPanel x:Name="stackPanelProductoAcademico" Margin="20" Grid.Row="0" Grid.Column="1" Visibility="Hidden">
                 <Label Content="Generación de producto académico" FontWeight="Bold" FontSize="30"/>
                 <TextBlock Text="Título del producto:" Margin="5"/>
@@ -175,6 +194,7 @@
                 <Button Content="Aceptar" HorizontalAlignment="Center" Margin="10"/>
             </StackPanel>
 
+            <!--Trabajo recepcional-->
             <StackPanel x:Name="stackPanelTrabajoRecepcional" Margin="20" Grid.Row="0" Grid.Column="1" Visibility="Hidden">
                 <Label Content="Trabajo recepcional" FontWeight="Bold" FontSize="30"/>
                 <TextBlock Text="Tipo de trabajo:" Margin="5"/>
@@ -198,7 +218,10 @@
 
                 <Button Content="Aceptar" HorizontalAlignment="Center" Margin="10"/>
             </StackPanel>
+            
+            
 
+            <!--Proyecto de campo-->
             <StackPanel x:Name="stackPanelProyectoCampo" Margin="20" Grid.Row="0" Grid.Column="1" Visibility="Hidden">
                 <Label Content="Proyecto de campo y/o gestión académica o artística" FontWeight="Bold" FontSize="30"/>
                 <TextBlock Text="Nombre del proyecto:" Margin="5"/>
